Adição de um novo Paragrafo

--- a/Exemplo-Site/index.html
+++ b/Exemplo-Site/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1>Estudando e aprendendo mais sobre versionamento de código com Git e GitHub</h1>
-    <hr>
+<hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur nobis dolor velit aliquam porro placeat natus ducimus dignissimos minus asperiores in reiciendis modi cum aliquid eum doloremque, recusandae nostrum delectus!</p>
+<hr>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt maiores iure, esse harum tempore adipisci perspiciatis obcaecati eius, molestiae corrupti ea saepe dolorum exercitationem reprehenderit animi itaque commodi, nam numquam.</p>
 </body>
 </html>
